--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
   http: ^1.2.2
+  intl: ^0.17.0
+  currency_text_input_formatter: ^2.2.3
 
 dev_dependencies:
   flutter_test:
