--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.2
   intl: ^0.17.0
   currency_text_input_formatter: ^2.2.3
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
   flutter_test:
