--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   intl: ^0.17.0
   currency_text_input_formatter: ^2.2.3
   webview_flutter: ^4.2.2
+  webview_flutter_plus: ^0.4.6
+  image_picker: ^1.1.2
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
