--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   webview_flutter_plus: ^0.4.6
   image_picker: ^1.1.2
   file_picker: ^8.0.7
+  accordion: ^2.6.0
 
 dev_dependencies:
   flutter_test:
