--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^8.0.7
   accordion: ^2.6.0
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
